# figurefeed-ai

./: .gitignore  README.md  post_figurefeed.py  pyproject.toml  workflow.py
agents/: crew.py  get_caption.py  identify_figure.py
agents/config/: agents.yaml  tasks.yaml
google_photos_client/: check_album_photos.py  check_folder_ids.py  google_photos_client.py
meta_client/: instagram_client.py  meta_long_lived_token.py
