[project]
name = "figurefeed-ai"
version = "1.0.0"
description = ""
authors = [
    {name = "Vinicius Ramos",email = "89560965+ViniciusARZ@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "crewai (>=0.120.1,<0.121.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
